--- a/CCUI-UI/App.xaml
+++ b/CCUI-UI/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="CCUI_UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CCUI_UI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CCUI_UI">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="CommonStyles.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
