--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -66,6 +66,7 @@
                     <MenuItem Name="miCutTransitionGuard" Header="Enable Cut Transition Guard" IsCheckable="True" IsChecked="True" Click="ClickToggleCutTransGuard" Focusable="False"></MenuItem>
                     <MenuItem Name="miPostset" Header="Enable Postset" IsCheckable="True" IsChecked="True" Click="ClickTogglePostsetFeature" Focusable="False"></MenuItem>
                     <MenuItem Name="miMRETransitions" Header="Blocking Auto Transition" IsCheckable="True" IsChecked="True" Click="ClickToggleMRETransitionFeature" Focusable="False"></MenuItem>
+                    <MenuItem Header="Open CCU Driver" Click="ClickOpenCCUDriverUI" Focusable="False"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="Help" IsTabStop="False" Focusable="False">
                     <MenuItem Name="miShowShortcuts" Header="Show Keyboard Shortcuts [S]" IsCheckable="True" IsChecked="False" Click="ClickShowKeyboardShortcuts" Focusable="False"></MenuItem>
