--- a/CCUI-StandaloneUI/App.xaml
+++ b/CCUI-StandaloneUI/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="CCUI_UI.App"
+﻿<Application x:Class="CCUI_StandaloneUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CCUI_UI">
+             xmlns:local="clr-namespace:CCUI_StandaloneUI">
     <Application.Resources>
+         
     </Application.Resources>
 </Application>
