--- a/CCUI-UI/MainUI.xaml
+++ b/CCUI-UI/MainUI.xaml
@@ -27,6 +27,9 @@
                     <MenuItem Click="ClickLoad" Header="Load State" Background="#171717" Foreground="#efefef"></MenuItem>
                     <MenuItem Click="ClickExport" Header="Export State" Background="#171717" Foreground="#efefef"></MenuItem>
                 </MenuItem>
+                <MenuItem Header="Connection" Background="#171717" Foreground="#efefef">
+                    <MenuItem Name="miFakeClients" Click="ClickToggleMock" IsCheckable="True" IsChecked="False" Header="Fake Cameras" Background="#171717" Foreground="#efefef"></MenuItem>
+                </MenuItem>
             </Menu>
 
             <Viewbox Grid.Row="1">
