--- a/CCUI-UI/PresetControl.xaml
+++ b/CCUI-UI/PresetControl.xaml
@@ -26,7 +26,9 @@
             </StackPanel>
         </Button>
 
-        <TextBlock Name="tbName" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Foreground="#efefef">PRESET NAME [stuff but it gets smaller]</TextBlock>
+        <Viewbox Grid.Column="1" Stretch="Uniform" PreviewMouseDown="_PreviewMouseDown">
+            <TextBlock Name="tbName" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#efefef" Margin="2,0,2,3">PRESET NAME</TextBlock>
+        </Viewbox>
 
         <Button Click="btnRun_Click" Name="btnRun" Grid.Column="2" Style="{StaticResource DarkBtn}" Width="40" Height="40">
             <StackPanel Orientation="Horizontal">
